ScrollingTreeScrollingNode: use LayerRepresentation for scroll container, scrolled contents layers https://bugs.webkit.org/show_bug.cgi?id=202256

Reviewed by Simon Fraser.

Make the scroll container and scrolled contents layer holders
platform-independent by using the LayerRepresentation as the underlying
type for the two member variables in ScrollingTreeScrollingNode.

* page/scrolling/ScrollingTreeScrollingNode.cpp:
(WebCore::ScrollingTreeScrollingNode::commitStateBeforeChildren):
* page/scrolling/ScrollingTreeScrollingNode.h:
* page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm:
(WebCore::ScrollingTreeFrameScrollingNodeMac::repositionScrollingLayers):
* page/scrolling/mac/ScrollingTreeOverflowScrollingNodeMac.mm:
(WebCore::ScrollingTreeOverflowScrollingNodeMac::repositionScrollingLayers):


Canonical link: https://commits.webkit.org/215845@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250415 268f45cc-cd09-0410-ab3c-d52691b4dbfc