Source/WebCore/page/scrolling/mac/ScrollingTreeFrameScrollingNodeMac.mm
@@ -199,7 +199,7 @@ void ScrollingTreeFrameScrollingNodeMac::currentScrollPositionChanged()
 void ScrollingTreeFrameScrollingNodeMac::repositionScrollingLayers()
 {
     // We use scroll position here because the root content layer is offset to account for scrollOrigin (see FrameView::positionForRootContentLayer).
-    scrolledContentsLayer().position = -currentScrollPosition();
+    static_cast<CALayer*>(scrolledContentsLayer()).position = -currentScrollPosition();
 }
 
 void ScrollingTreeFrameScrollingNodeMac::repositionRelatedLayers()
